<resources>
    <string name="app_name">FoodMandu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">FOODMANDU</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_My_Favourites">My_Favourites</string>
    <string name="menu_My_Basket">My_Basket</string>
    <string name="menu_Order_History">Order_History</string>
    <string name="menu_Notifications">Notifications</string>
    <string name="menu_More">More</string>
    <string name="menu_Restaurant">Restaurant</string>
    <string name="menu_Liquors">Liquors</string>
    <string name="menu_Bakeries">Bakeries</string>
    <string name="menu_Organic">Organic</string>
    <string name="Category">Category</string>
    <string name="search">search</string>
</resources>
